--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Github Site Demo</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <title>Patricia Rae Villa's Portfolio</title>
 </head>
 <body>
-    <h1>Hello World!</h1>
-    <div>
-        <img src="images/thumbsup.jpg" alt="happy girl">
-    </div>
+    <h1>Patricia Rae Villa's Portfolio</h1>
+
+    <a href="#">Home</a> 
+    <a href="about.html">About</a> 
+    <a href="works.html">Works</a> 
+    <a href="contact.html">Contact</a>
+
+    <p>Welcome to my joyous portfolio!</p>
 </body>
 </html>
